--- a/app/src/main/res/layout/layout_tutorial_dialog_view.xml
+++ b/app/src/main/res/layout/layout_tutorial_dialog_view.xml
@@ -22,13 +22,25 @@
             android:singleLine="true"
             android:textAppearance="@style/regularText"
             android:text="@string/tutorial_headline"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <ListView
             android:id="@+id/tutorial_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tutorials_dismiss_all"
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:singleLine="true"
+            android:textAppearance="@style/regularText"
+            android:textColor="@android:color/darker_gray"
+            android:text="@string/tutorial_dismiss_message"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
