--- a/app/src/main/res/layout/layout_tutorial_dialog_view.xml
+++ b/app/src/main/res/layout/layout_tutorial_dialog_view.xml
@@ -15,13 +15,13 @@
         android:orientation="vertical">
 
         <TextView
-            android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:padding="10dp"
             android:singleLine="true"
-            android:textAppearance="@style/regularText"
             android:text="@string/tutorial_headline"
+            android:textAppearance="@style/regularText"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -30,17 +30,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/tutorials_dismiss_all"
-            android:padding="10dp"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:singleLine="true"
-            android:textAppearance="@style/regularText"
-            android:textColor="@android:color/darker_gray"
-            android:text="@string/tutorial_dismiss_message"
-            android:textSize="16sp" />
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <CheckBox
+                android:id="@+id/tutorials_dismiss_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:text="@string/tutorial_dismiss_message"
+                android:textAppearance="@style/regularText"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="16sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
