--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -20,11 +20,31 @@
         android:visibility="gone" />
 
     <TextView
-        android:id="@+id/game_result_set"
+        android:id="@+id/game_result_set1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start|center_vertical"
         android:padding="5dp"
+        android:paddingEnd="0dp"
+        android:layout_gravity="start|center_vertical"
+        android:textAppearance="@style/regularText" />
+
+    <TextView
+        android:id="@+id/game_result_set_divider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
+        android:layout_gravity="start|center_vertical"
+        android:textAppearance="@style/regularText" />
+
+    <TextView
+        android:id="@+id/game_result_set2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:paddingStart="0dp"
+        android:layout_gravity="start|center_vertical"
         android:textAppearance="@style/regularText" />
 
     <TextView
