--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -14,12 +14,13 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp">
 
-        <TextView
+        <ImageView
             android:id="@+id/player_rsvp_title"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:paddingEnd="10dp"
+            android:src="@drawable/attendance"
             android:textAppearance="@style/regularText"
             android:visibility="gone" />
 
