--- a/app/src/main/res/menu/make_teams_menu.xml
+++ b/app/src/main/res/menu/make_teams_menu.xml
@@ -11,6 +11,10 @@
         android:title="@string/action_enter_results"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_empty_bench"
+        android:title="@string/action_empty_bench"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_share"
         android:title="@string/action_share"
         android:icon="@drawable/share"
