--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="win">#00FF00</color>
     <color name="lose">#FF0000</color>
     <color name="draw">#0000FF</color>
+    <color name="grey">#808080</color>
 
     <color name="low">#CC0000</color>
     <color name="high">#05c880</color>
