--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -45,14 +45,13 @@
         android:gravity="center_vertical"
         android:textAppearance="@style/regularText" />
 
-    <TextView
+    <ImageView
         android:id="@+id/player_recent_performance"
-        android:layout_width="30dp"
+        android:layout_width="20dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="3dp"
-        android:layout_marginRight="6dp"
-        android:gravity="center_vertical"
-        android:textAppearance="@style/regularText" />
+        android:layout_marginRight="9dp"
+        android:gravity="center_vertical|end" />
 
     <TextView
         android:id="@+id/player_attributes"
