--- a/app/src/main/res/layout/player_crad_fragment.xml
+++ b/app/src/main/res/layout/player_crad_fragment.xml
@@ -111,11 +111,11 @@
                 android:text="Properties"
                 android:textSize="18sp" />
 
-            <CheckBox
-                android:id="@+id/player_is_injured"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Injured" />
+<!--            <CheckBox-->
+<!--                android:id="@+id/player_is_injured"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Injured" />-->
 
             <CheckBox
                 android:id="@+id/player_is_gk"
