--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,12 +23,12 @@
                 android:id="@+id/nav_save_snapshot"
                 android:icon="@drawable/nav_backup"
                 android:title="@string/nav_backup_to_file"
-                android:visible="true" />
+                android:visible="false" />
             <item
                 android:id="@+id/nav_import_snapshot"
                 android:icon="@android:drawable/ic_menu_upload"
                 android:title="@string/nav_import_from_file"
-                android:visible="true" />
+                android:visible="false" />
         </group>
         <group
             android:id="@+id/menu_help"
