--- a/app/src/main/res/layout/layout_make_teams_activity.xml
+++ b/app/src/main/res/layout/layout_make_teams_activity.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <LinearLayout
@@ -31,13 +32,15 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingTop="40dp">
 
                 <ListView
                     android:id="@+id/team_1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:clipToPadding="false"
                     android:divider="@null"
                     android:padding="5dp" />
 
@@ -73,13 +76,15 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingTop="40dp">
 
                 <ListView
                     android:id="@+id/team_2"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:clipToPadding="false"
                     android:divider="@null"
                     android:padding="5dp" />
             </LinearLayout>
@@ -238,7 +243,8 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="16dp"
+        android:paddingBottom="8dp">
 
         <LinearLayout
             android:id="@+id/shuffle_views"
