--- a/app/src/main/res/layout/player_details_activity.xml
+++ b/app/src/main/res/layout/player_details_activity.xml
@@ -9,7 +9,8 @@
         android:id="@+id/player_pager"
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:paddingTop="46dp">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/player_tabs"
