--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -60,6 +60,15 @@
         android:textAppearance="@style/regularText"
         android:visibility="gone" />
 
+    <ImageView
+        android:id="@+id/game_player_mvp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_gravity="start|center_vertical"
+        android:layout_marginStart="2dp"
+        android:src="@drawable/trophy_better"
+        android:visibility="invisible" />
+
     <TextView
         android:id="@+id/game_player_count"
         android:layout_width="0dp"
